# tmp_sl

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: notebooks.ipynb
src/sysloss/: __init__.py  components.py  element.py  elements.py  sysloss.py  system.py
tests/data/: loss.toml
tests/unit/: test_components.py  test_element.py  test_elements.py  test_sysloss.py  test_system.py
work/: case1.ltp3  case_1.drawio  ideas.txt  source1.toml  sysLoss.ipynb
